refactor: Update dependencies and script configuration
Migrates project dependencies to CDNs and updates the Vite configuration to use import maps. Removes unused files and simplifies type definitions to improve project structure and maintainability.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,8 +24,6 @@
       ]
     },
     "allowImportingTsExtensions": true,
-    "noEmit": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true
+    "noEmit": true
   }
 }
