--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "@react-three/postprocessing": "^3.0.4"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
     "@eslint/js": "^8.57.0",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "eslint": "^8.57.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
